--- a/Templates/Per Tenant Extension/.github/AL-Go/settings.json
+++ b/Templates/Per Tenant Extension/.github/AL-Go/settings.json
@@ -1,5 +1,5 @@
 {
-    "type": "Per Tenant Extension",
+    "type": "PTE",
     "country": "us",
     "VersioningStrategy": 2,
     "KeyVaultName": "",
