adding more changes

--- a/Templates/Per Tenant Extension/.github/workflows/CreateApp.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateApp.yaml
@@ -1,22 +1,21 @@
-name: Add new test app
+name: Create a new app
 
 on:
   workflow_dispatch:
     inputs:
-      publisher:
-        description: Publisher name of the test app
-        required: true
       name:
-        description: Name of the test app
+        description: Name
+        required: true      
+      publisher:
+        description: Publisher
         required: true
       idrange:
-        description: ID range
+        description: ID range (from..to)
         required: true
-        default: '50000..99999'  
       directCommit:
         description: Direct COMMIT (Y/N)
         required: false
-        default: 'N'
+        default: "N"
 
 defaults:
   run:
@@ -27,11 +26,19 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Add new test app
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Read settings
+        uses: microsoft/AL-Go/ReadSettings@main
+        with:
+          get: type
+
+      - name: Create a new app
         uses: microsoft/AL-Go/CreateApp@main
         with:
-          type: 'Test App'
-          publisher: ${{ github.event.inputs.publisher }}
+          type: ${{ env.type }}
           name: ${{ github.event.inputs.name }}
+          publisher: ${{ github.event.inputs.publisher }}
           idrange: ${{ github.event.inputs.idrange }}
           directCommit: ${{ github.event.inputs.directCommit }}
