--- a/Templates/Per Tenant Extension/.github/workflows/CreateRelease.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateRelease.yaml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Read settings
-        uses: microsoft/AL-Go-Actions/ReadSettings@main
+        uses: microsoft/AL-Go/ReadSettings@main
         id: readsettings
         with:
           release: 'Y'
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Check for updates to AL-Go system files
-        uses: microsoft/AL-Go-Actions/CheckForUpdates@main
+        uses: microsoft/AL-Go/CheckForUpdates@main
         with:
           settings: ${{needs.Settings.outputs.Settings}}
   Environments:
@@ -74,7 +74,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Read secrets
-        uses: microsoft/AL-Go-Actions/ReadSecrets@main
+        uses: microsoft/AL-Go/ReadSecrets@main
         env:
           secrets: ${{toJson(secrets)}}
         with:
@@ -82,7 +82,7 @@ jobs:
           secrets: 'licenseFileUrl,insiderSasToken,CodeSignCertificateUrl,CodeSignCertificatePassword'
 
       - name: Run pipeline
-        uses: microsoft/AL-Go-Actions/RunPipeline@main
+        uses: microsoft/AL-Go/RunPipeline@main
         with:
           Settings: ${{ needs.Settings.outputs.Settings }}
           Secrets: ${{ env.RepoSecrets }}
@@ -159,7 +159,7 @@ jobs:
 
       - name: Cleanup
         if: always()
-        uses: microsoft/AL-Go-Actions/PipelineCleanup@main
+        uses: microsoft/AL-Go/PipelineCleanup@main
   Deploy:
     runs-on: windows-latest
     needs: [ Build, Environments ]
@@ -181,7 +181,7 @@ jobs:
 
       - name: Deploy
         if: ${{matrix.environment != 'N/A'}}
-        uses: microsoft/AL-Go-Actions/Deploy@main
+        uses: microsoft/AL-Go/Deploy@main
         env:
           authContext: '${{secrets.AuthContext}}'
         with:
