--- a/Templates/Per Tenant Extension/.github/workflows/PublishToEnvironment.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/PublishToEnvironment.yaml
@@ -49,7 +49,7 @@ jobs:
     steps:
       - name: Deploy
         if: ${{matrix.environment != 'N/A'}}
-        uses: microsoft/AL-Go-Actions/Deploy@main
+        uses: microsoft/AL-Go/Deploy@main
         env:
           authContext: '${{secrets.AuthContext}}'
         with:
