Support multiple projects

--- a/Templates/AppSource App/.AL-Go/settings.json
+++ b/Templates/AppSource App/.AL-Go/settings.json
@@ -1,7 +1,6 @@
 {
-    "type": "Per Tenant Extension",
+    "type": "AppSource App",
     "country": "us",
-    "VersioningStrategy": 2,
     "KeyVaultName": "",
     "appFolders": [
     ],
