--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -18,35 +18,55 @@ defaults:
     shell: PowerShell
 
 jobs:
-  Settings:
+  CheckForUpdates:
     runs-on: windows-latest
-    outputs:
-      Settings: ${{steps.readsettings.outputs.Settings}}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Read settings
         uses: microsoft/AL-Go/ReadSettings@main
-        id: readsettings
         with:
-          release: 'N'
-  CheckForUpdates:
-    runs-on: windows-latest
-    needs: Settings
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+          get: TemplateUrl,TemplateBranch
 
       - name: Check for updates to AL-Go system files
         uses: microsoft/AL-Go/CheckForUpdates@main
         with:
-          settings: ${{needs.Settings.outputs.Settings}}
+          templateUrl: ${{ env.TemplateUrl }}
+          templateBranch: ${{ env.TemplateBranch }}
+  Projects:
+    runs-on: windows-latest
+    outputs:
+      projects: ${{steps.Projects.outputs.projects}}
+      projectCount: ${{steps.Projects.outputs.projectCount}}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Projects
+        id: Projects
+        run: |
+          if (Test-Path ".AL-Go" -PathType Container) {
+            $projects = @(".")
+          }
+          else {
+            $projects = @(Get-ChildItem -Path $ENV:GITHUB_WORKSPACE -Directory | Where-Object { Test-Path (Join-Path $_.FullName ".AL-Go") -PathType Container } | ForEach-Object { $_.Name })
+          }
+          if ($projects.Count -eq 1) {
+            $projectsJSon = "[$($projects | ConvertTo-Json -compress)]"
+          }
+          else {
+            $projectsJSon = $projects | ConvertTo-Json -compress
+          }
+          Write-Host "::set-output name=projects::$projectsJson"
+          Write-Host "::set-output name=projectCount::$($projects.Count)"
+          Write-Host "set-output name=projects::$projectsJson"
+          Write-Host "set-output name=projectCount::$($projects.Count)"
   Environments:
     runs-on: windows-latest
     outputs:
-      deployMatrix: ${{steps.Environments.outputs.deployMatrix}}
-    needs: Settings
+      environments: ${{steps.Environments.outputs.environments}}
+      environmentCount: ${{steps.Environments.outputs.environmentCount}}
     steps:
       - name: Environments
         id: Environments
@@ -56,14 +76,25 @@ jobs:
             "Accept"        = "application/vnd.github.v3+json"
           }
           $url = "$($ENV:GITHUB_API_URL)/repos/$($ENV:GITHUB_REPOSITORY)/environments"
-          $environments = Invoke-WebRequest -UseBasicParsing -Headers $headers -Uri $url | ConvertFrom-Json
-          $useEnvironments = @($environments.environments | Where-Object { $_.name -notlike '*(Production)*'} | ForEach-Object { $_.Name })
-          if ($useEnvironments.Count -eq 0) { $useEnvironments = @("N/A") }
-          $deployMatrix = @{ "environment" = $useEnvironments } | ConvertTo-Json -compress
-          Write-Host "::set-output name=deployMatrix::$deployMatrix"
+          $environments = @((Invoke-WebRequest -UseBasicParsing -Headers $headers -Uri $url | ConvertFrom-Json).environments | ForEach-Object { $_.Name })
+          if ($environments.Count -eq 1) {
+            $environmentsJSon = "[$($environments | ConvertTo-Json -compress)]"
+          }
+          else {
+            $environmentsJSon = $environments | ConvertTo-Json -compress
+          }
+          Write-Host "::set-output name=environments::$environmentsJson"
+          Write-Host "::set-output name=environmentCount::$($environments.Count)"
+          Write-Host "set-output name=environments::$environmentsJson"
+          Write-Host "set-output name=environmentCount::$($environments.Count)"
   Build:
     runs-on: windows-latest
-    needs: Settings
+    needs: [ Projects ]
+    strategy:
+      matrix:
+        project: ${{fromJson(needs.Projects.outputs.projects)}}
+      fail-fast: false
+    name: Build ${{matrix.project}}
     outputs:
       AppsArtifactsName: ${{steps.calculateArtifactNames.outputs.AppsArtifactsName}}
       TestAppsArtifactsName: ${{steps.calculateArtifactNames.outputs.TestAppsArtifactsName}}
@@ -72,34 +103,44 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Read settings
+        uses: microsoft/AL-Go/ReadSettings@main
+        id: readsettings
+        with:
+          project: ${{matrix.project}}
+
       - name: Read secrets
         uses: microsoft/AL-Go/ReadSecrets@main
         env:
           secrets: ${{toJson(secrets)}}
         with:
-          settings: ${{needs.Settings.outputs.Settings}}
-          secrets: 'licenseFileUrl,insiderSasToken,CodeSignCertificateUrl,CodeSignCertificatePassword'
+          settings: ${{steps.readsettings.outputs.Settings}}
+          secrets: 'licenseFileUrl,insiderSasToken,CodeSignCertificateUrl,CodeSignCertificatePassword,KeyVaultCertificateUrl,KeyVaultCertificatePassword,KeyVaultClientId'
 
       - name: Run pipeline
         uses: microsoft/AL-Go/RunPipeline@main
         with:
-          Settings: ${{ needs.Settings.outputs.Settings }}
+          Project: ${{matrix.project}}
+          Settings: ${{ steps.readsettings.outputs.Settings }}
           Secrets: ${{ env.RepoSecrets }}
 
       - name: Publish test results
         if: success() || failure()
         uses: mikepenz/action-junit-report@v1
         with:
-          report_paths: 'TestResults*.xml'
+          check_name: 'Test Report ${{matrix.project}}'
+          report_paths: '${{matrix.project}}/TestResults*.xml'
           github_token: ${{ github.token }}
 
       - name: Calculate Artifact names
         id: calculateArtifactNames
         run: |
-          $settings = '${{ needs.Settings.outputs.Settings }}' | ConvertFrom-Json
-          $AppsArtifactsName = "$($settings.RepoName)-Apps-$($settings.repoVersion).$($settings.appBuild).$($settings.appRevision)"
-          $TestAppsArtifactsName = "$($settings.RepoName)-TestApps-$($settings.repoVersion).$($settings.appBuild).$($settings.appRevision)"
-          $TestResultsArtifactsName = "TestResults"
+          $settings = '${{steps.readsettings.outputs.Settings}}' | ConvertFrom-Json
+          $project = '${{matrix.project}}'
+          if ($project -eq ".") { $project = $settings.RepoName }
+          $AppsArtifactsName = "$project-Apps-$($settings.repoVersion).$($settings.appBuild).$($settings.appRevision)"
+          $TestAppsArtifactsName = "$project-TestApps-$($settings.repoVersion).$($settings.appBuild).$($settings.appRevision)"
+          $TestResultsArtifactsName = "$project-TestResults"
           'AppsArtifactsName','TestAppsArtifactsName','TestResultsArtifactsName' | ForEach-Object {
             $value = (Get-Variable -Name $_).Value
             Write-Host "::set-output name=$_::$value"
@@ -110,14 +151,14 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ${{env.appsArtifactsName}}
-          path: output/Apps/
+          path: '${{matrix.project}}/output/Apps/'
           if-no-files-found: ignore
 
       - name: Publish artifacts - test apps
         uses: actions/upload-artifact@v2
         with:
           name: ${{env.testAppsArtifactsName}}
-          path: output/TestApps/
+          path: '${{matrix.project}}/output/TestApps/'
           if-no-files-found: ignore
 
       - name: Publish artifacts - test results
@@ -125,7 +166,7 @@ jobs:
         if: success() || failure()
         with:
           name: ${{env.testResultsArtifactsName}}
-          path: TestResults.xml
+          path: '${{matrix.project}}/TestResults.xml'
           if-no-files-found: ignore
 
       - name: Cleanup
@@ -133,29 +174,27 @@ jobs:
         uses: microsoft/AL-Go/PipelineCleanup@main
   Deploy:
     runs-on: windows-latest
-    needs: [ Build, Environments ]
+    needs: [ Build, Environments, Projects ]
+    if: ${{needs.Environments.outputs.environmentCount > 0}}
     strategy:
-      matrix: ${{fromJson(needs.Environments.outputs.deployMatrix)}}
+      matrix:
+        environment: ${{fromJson(needs.Environments.outputs.environments)}}
       fail-fast: false
     name: Deploy to ${{matrix.environment}}
     environment:
       name: ${{matrix.environment}}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Download
+      - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
-          name: ${{needs.Build.Outputs.AppsArtifactsName}}
           path: '${{ github.workspace}}\artifacts'
 
       - name: Deploy
-        if: ${{matrix.environment != 'N/A'}}
         uses: microsoft/AL-Go/Deploy@main
         env:
           authContext: '${{secrets.AuthContext}}'
         with:
+          type: 'CD'
+          projects: '${{secrets.Projects}}'
           environmentName: ${{matrix.environment}}
-          artifactsUrl: '${{ github.workspace}}\artifacts'
-          appSourceApp: 'N'
+          artifacts: '${{ github.workspace}}\artifacts'
