--- a/Templates/AppSource App/.github/workflows/CreateTestApp.yaml
+++ b/Templates/AppSource App/.github/workflows/CreateTestApp.yaml
@@ -1,11 +1,12 @@
-name: Add new test app
+name: Create a new test app
 
 on:
   workflow_dispatch:
     inputs:
       name:
         description: Name
-        required: true      
+        required: true
+        default: '<YourAppName>.Test'      
       publisher:
         description: Publisher
         required: true
@@ -27,7 +28,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Add new test app
+      - name: Creating a new test app
         uses: microsoft/AL-Go/CreateApp@main
         with:
           type: 'Test App'
