--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -134,6 +134,7 @@ jobs:
 
       - name: Calculate Artifact names
         id: calculateArtifactNames
+        if: success() || failure()
         run: |
           $settings = '${{steps.readsettings.outputs.Settings}}' | ConvertFrom-Json
           $project = '${{matrix.project}}'
