fixing input on the yaml file

--- a/Actions/ReadSecrets/action.yaml
+++ b/Actions/ReadSecrets/action.yaml
@@ -11,6 +11,10 @@ inputs:
   secrets:
     description: Comma separated list of Secrets to get
     required: true
+  updateSettingsWithValues:
+    description: Comma separated list of Secrets to get
+    required: false
+    default: false    
 outputs:
   Settings:
     description: Settings in compressed Json format
@@ -18,7 +22,7 @@ outputs:
 runs:
   using: composite
   steps:
-    - run: ${{ github.action_path }}/ReadSecrets.ps1 -settingsJson '${{ inputs.settings }}' -keyVaultName '${{ inputs.keyVaultName }}' -secrets '${{ inputs.secrets }}'
+    - run: ${{ github.action_path }}/ReadSecrets.ps1 -settingsJson '${{ inputs.settings }}' -keyVaultName '${{ inputs.keyVaultName }}' -secrets '${{ inputs.secrets }}' -updateSettingsWithValues '${{ inputs.updateSettingsWithValues }}'
       id: readsecrets
       shell: PowerShell
 branding:
