working version of dependencies

--- a/Actions/ReadSecrets/action.yaml
+++ b/Actions/ReadSecrets/action.yaml
@@ -11,10 +11,19 @@ inputs:
   secrets:
     description: Comma separated list of Secrets to get
     required: true
+  updateSettingsWithValues:
+    description: Specifies if the values of secrets should be updated
+    required: false
+    default: 'N'    
+outputs:
+  Settings:
+    description: Settings in compressed Json format
+    value: ${{steps.readsecrets.outputs.Settings}}
 runs:
   using: composite
   steps:
-    - run: ${{ github.action_path }}/ReadSecrets.ps1 -settingsJson '${{ inputs.settings }}' -keyVaultName '${{ inputs.keyVaultName }}' -secrets '${{ inputs.secrets }}'
+    - run: ${{ github.action_path }}/ReadSecrets.ps1 -settingsJson '${{ inputs.settings }}' -keyVaultName '${{ inputs.keyVaultName }}' -secrets '${{ inputs.secrets }}' -updateSettingsWithValues ('${{ inputs.updateSettingsWithValues }}' -eq 'Y')
+      id: readsecrets
       shell: PowerShell
 branding:
   icon: terminal
