--- a/Actions/CheckForUpdates/action.yaml
+++ b/Actions/CheckForUpdates/action.yaml
@@ -13,10 +13,6 @@ inputs:
     description: The GitHub token running the action
     required: false
     default: ${{ github.token }}
-  update:
-    description: Set this input to Y in order to update AL-Go System Files if needed
-    required: false
-    default: N
   settings:
     description: Settings from template repository in compressed Json format
     required: false
@@ -29,14 +25,18 @@ inputs:
     description: Branch in template repository to use for the update (default is the default branch)
     required: false
     default: ''
+  update:
+    description: Set this input to Y in order to update AL-Go System Files if needed
+    required: false
+    default: 'N'
   directCommit:
     description: Direct Commit (Y/N)
     required: false
-    default: N
+    default: 'N'
 runs:
   using: composite
   steps:
-    - run: ${{ github.action_path }}/CheckForUpdates.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -update ('${{ inputs.update }}' -eq 'Y') -settingsJson '${{ inputs.settings }}' -templateUrl '${{ inputs.templateUrl }}' -templateBranch '${{ inputs.templateBranch }}' -directCommit ('${{ inputs.directCommit }}' -eq 'Y')
+    - run: ${{ github.action_path }}/CheckForUpdates.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -settings '${{ inputs.settings }}' -templateUrl '${{ inputs.templateUrl }}' -templateBranch '${{ inputs.templateBranch }}' -update ('${{ inputs.update }}' -eq 'Y') -directCommit ('${{ inputs.directCommit }}' -eq 'Y')
       shell: PowerShell
 branding:
   icon: terminal
