--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -20,4 +20,7 @@ jobs:
 
       - name: Run tests
         run: |
-          . ".\Tests\runtests.ps1"
+          Get-ChildItem -Path "Tests\*.Test.ps1" | ForEach-Object {
+            Invoke-Pester $_.FullName -Passthru
+          }
+
