--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -34,11 +34,13 @@ jobs:
         with:
           templateUrl: ${{ env.TemplateUrl }}
           templateBranch: ${{ env.TemplateBranch }}
-  Projects:
+  Analyze:
     runs-on: windows-latest
     outputs:
-      projects: ${{steps.Projects.outputs.projects}}
-      projectCount: ${{steps.Projects.outputs.projectCount}}
+      projects: ${{ steps.Projects.outputs.projects }}
+      projectCount: ${{ steps.Projects.outputs.projectCount }}
+      environments: ${{ steps.Environments.outputs.environments }}
+      environmentCount: ${{ steps.Environments.outputs.environmentCount }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -62,17 +64,12 @@ jobs:
           Write-Host "::set-output name=projectCount::$($projects.Count)"
           Write-Host "set-output name=projects::$projectsJson"
           Write-Host "set-output name=projectCount::$($projects.Count)"
-  Environments:
-    runs-on: windows-latest
-    outputs:
-      environments: ${{steps.Environments.outputs.environments}}
-      environmentCount: ${{steps.Environments.outputs.environmentCount}}
-    steps:
+
       - name: Environments
         id: Environments
         run: |
           $headers = @{ 
-            "Authorization" = "token ${{github.token}}"
+            "Authorization" = "token ${{ github.token }}"
             "Accept"        = "application/vnd.github.v3+json"
           }
           $url = "$($ENV:GITHUB_API_URL)/repos/$($ENV:GITHUB_REPOSITORY)/environments"
@@ -89,56 +86,54 @@ jobs:
           Write-Host "set-output name=environmentCount::$($environments.Count)"
   Build:
     runs-on: windows-latest
-    needs: [ Projects ]
+    needs: [ Analyze ]
     strategy:
       matrix:
-        project: ${{fromJson(needs.Projects.outputs.projects)}}
+        project: ${{ fromJson(needs.Analyze.outputs.projects) }}
       fail-fast: false
-    name: Build ${{matrix.project}}
+    name: Build ${{ matrix.project }}
     outputs:
-      AppsArtifactsName: ${{steps.calculateArtifactNames.outputs.AppsArtifactsName}}
-      TestAppsArtifactsName: ${{steps.calculateArtifactNames.outputs.TestAppsArtifactsName}}
-      TestResultsArtifactsName: ${{steps.calculateArtifactNames.outputs.TestResultsArtifactsName}}
+      AppsArtifactsName: ${{ steps.calculateArtifactNames.outputs.AppsArtifactsName }}
+      TestAppsArtifactsName: ${{ steps.calculateArtifactNames.outputs.TestAppsArtifactsName }}
+      TestResultsArtifactsName: ${{ steps.calculateArtifactNames.outputs.TestResultsArtifactsName }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Read settings
         uses: microsoft/AL-Go/ReadSettings@main
-        id: readsettings
         with:
-          project: ${{matrix.project}}
+          project: ${{ matrix.project }}
 
       - name: Read secrets
         uses: microsoft/AL-Go/ReadSecrets@main
         env:
-          secrets: ${{toJson(secrets)}}
+          secrets: ${{ toJson(secrets) }}
         with:
-          settings: ${{steps.readsettings.outputs.Settings}}
+          settingsJson: ${{ env.Settings }}
           secrets: 'licenseFileUrl,insiderSasToken,CodeSignCertificateUrl,CodeSignCertificatePassword,KeyVaultCertificateUrl,KeyVaultCertificatePassword,KeyVaultClientId'
-          updateSettingsWithValues: 'Y'
 
       - name: Run pipeline
         uses: microsoft/AL-Go/RunPipeline@main
         with:
-          Project: ${{matrix.project}}
-          Settings: ${{ env.Settings }}
-          Secrets: ${{ env.RepoSecrets }}
+          Project: ${{ matrix.project }}
+          settingsJson: ${{ env.Settings }}
+          SecretsJson: ${{ env.RepoSecrets }}
 
       - name: Publish test results
         if: success() || failure()
         uses: mikepenz/action-junit-report@v1
         with:
-          check_name: 'Test Report ${{matrix.project}}'
-          report_paths: '${{matrix.project}}/TestResults*.xml'
+          check_name: 'Test Report ${{ matrix.project }}'
+          report_paths: '${{ matrix.project }}/TestResults*.xml'
           github_token: ${{ github.token }}
 
       - name: Calculate Artifact names
         id: calculateArtifactNames
         if: success() || failure()
         run: |
-          $settings = '${{steps.readsettings.outputs.Settings}}' | ConvertFrom-Json
-          $project = '${{matrix.project}}'
+          $settings = '${{ env.Settings }}' | ConvertFrom-Json
+          $project = '${{ matrix.project }}'
           if ($project -eq ".") { $project = $settings.RepoName }
           $AppsArtifactsName = "$project-Apps-$($settings.repoVersion).$($settings.appBuild).$($settings.appRevision)"
           $TestAppsArtifactsName = "$project-TestApps-$($settings.repoVersion).$($settings.appBuild).$($settings.appRevision)"
@@ -152,53 +147,53 @@ jobs:
       - name: Publish artifacts - apps
         uses: actions/upload-artifact@v2
         with:
-          name: ${{env.appsArtifactsName}}
-          path: '${{matrix.project}}/output/Apps/'
+          name: ${{ env.appsArtifactsName }}
+          path: '${{ matrix.project }}/output/Apps/'
           if-no-files-found: ignore
 
       - name: Publish artifacts - test apps
         uses: actions/upload-artifact@v2
         with:
-          name: ${{env.testAppsArtifactsName}}
-          path: '${{matrix.project}}/output/TestApps/'
+          name: ${{ env.testAppsArtifactsName }}
+          path: '${{ matrix.project }}/output/TestApps/'
           if-no-files-found: ignore
 
       - name: Publish artifacts - test results
         uses: actions/upload-artifact@v2
         if: success() || failure()
         with:
-          name: ${{env.testResultsArtifactsName}}
-          path: '${{matrix.project}}/TestResults.xml'
+          name: ${{ env.testResultsArtifactsName }}
+          path: '${{ matrix.project }}/TestResults.xml'
           if-no-files-found: ignore
 
       - name: Cleanup
         if: always()
         uses: microsoft/AL-Go/PipelineCleanup@main
         with:
-          Project: ${{matrix.project}}
+          Project: ${{ matrix.project }}
   Deploy:
     runs-on: windows-latest
-    needs: [ Build, Environments, Projects ]
-    if: ${{needs.Environments.outputs.environmentCount > 0}}
+    needs: [ Analyze, Build ]
+    if: ${{ needs.Analyze.outputs.environmentCount > 0 }}
     strategy:
       matrix:
-        environment: ${{fromJson(needs.Environments.outputs.environments)}}
+        environment: ${{ fromJson(needs.Analyze.outputs.environments) }}
       fail-fast: false
-    name: Deploy to ${{matrix.environment}}
+    name: Deploy to ${{ matrix.environment }}
     environment:
-      name: ${{matrix.environment}}
+      name: ${{ matrix.environment }}
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
-          path: '${{ github.workspace}}\artifacts'
+          path: '${{ github.workspace }}\artifacts'
 
       - name: Deploy
         uses: microsoft/AL-Go/Deploy@main
         env:
-          authContext: '${{secrets.AuthContext}}'
+          authContext: '${{ secrets.AuthContext }}'
         with:
           type: 'CD'
-          projects: '${{secrets.Projects}}'
-          environmentName: ${{matrix.environment}}
-          artifacts: '${{ github.workspace}}\artifacts'
+          projects: '${{ secrets.Projects }}'
+          environmentName: ${{ matrix.environment }}
+          artifacts: '${{ github.workspace }}\artifacts'
