--- a/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
@@ -29,14 +29,13 @@ jobs:
 
       - name: Read settings
         uses: microsoft/AL-Go/ReadSettings@main
-        id: readsettings
 
       - name: Read secrets
         uses: microsoft/AL-Go/ReadSecrets@main
         env:
-          secrets: ${{toJson(secrets)}}
+          secrets: ${{ toJson(secrets) }}
         with:
-          settingsJson: ${{steps.readsettings.outputs.SettingsJson}}
+          settingsJson: ${{ env.Settings }}
           secrets: 'adminCenterApiCredentials'
 
       - name: Check AdminCenterApiCredentials / Initiate Device Login (open to see code)
