--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -22,16 +22,15 @@ jobs:
 
       - name: Read settings
         uses: microsoft/AL-Go/ReadSettings@main
-        id: readsettings
         with:
           get: KeyVaultName,GhTokenWorkflowSecretName,TemplateUrl,TemplateBranch
 
       - name: Read secrets
         uses: microsoft/AL-Go/ReadSecrets@main
         env:
-          secrets: ${{toJson(secrets)}}
+          secrets: ${{ toJson(secrets) }}
         with:
-          settingsJson: ${{steps.readsettings.outputs.SettingsJson}}
+          settingsJson: ${{ env.Settings }}
           secrets: 'ghTokenWorkflow=${{ env.GHTOKENWORKFLOWSECRETNAME }}'
 
       - name: Update AL-Go system files
