--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -20,15 +20,18 @@ jobs:
 
       - name: Run tests
         run: |
-          Invoke-Pester @(Get-ChildItem -Path "Tests\*.Test.ps1") -OutputFile "TestResults.xml" -OutputFormat JUnitXml
+          try {
+            Invoke-Pester @(Get-ChildItem -Path "Tests\*.Test.ps1") -OutputFile "TestResults.xml" -OutputFormat JUnitXml
+          }
+          catch {
+            Write-Host "::Error::There are test failures"
+          }
 
       - name: Publish test results
         if: success() || failure()
-        uses: mikepenz/action-junit-report@v2
+        uses: mikepenz/action-junit-report@v1
         with:
           check_name: 'Test Report'
           report_paths: 'TestResults.xml'
           github_token: ${{ github.token }}
-          fail_on_failure: true
-          require_tests: true
 
