--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,15 +19,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run tests
-        run: |
-          try {
-            $failedTests = Invoke-Pester @(Get-ChildItem -Path "Tests\*.Test.ps1") -PassThru
-            if ($TestResults.FailedCount -gt 0) {
-              Write-Host "::Error::$($TestResults.FailedCount) tests are failing"
-              exit 1
-            }
-          }
-          catch {
-            Write-Host "::Error::Error when running tests. The Error was $($_.Exception.Message)"
-            exit 1
-          }
+        run: Tests\RunTests.ps1
