--- a/Templates/Per Tenant Extension/.github/workflows/PublishToEnvironment.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/PublishToEnvironment.yaml
@@ -18,7 +18,7 @@ defaults:
 
 jobs:
 
-  Environments:
+  Analyze:
     runs-on: windows-latest
     outputs:
       environments: ${{ steps.Environments.outputs.environments }}
@@ -39,27 +39,29 @@ jobs:
           else {
             $environmentsJSon = $environments | ConvertTo-Json -compress
           }
-          Write-Host "::set-output name=environments::$($environments | ConvertTo-Json -compress)"
+          Write-Host "::set-output name=environments::$environmentsJson"
           Write-Host "::set-output name=environmentCount::$($environments.Count)"
+          Write-Host "set-output name=environments::$environmentsJson"
+          Write-Host "set-output name=environmentCount::$($environments.Count)"
         
   Deploy:
     runs-on: windows-latest
-    needs: [ Environments ]
-    if: ${{needs.Environments.outputs.environmentCount > 0}}
+    needs: [ Analyze ]
+    if: ${{ needs.Analyze.outputs.environmentCount > 0 }}
     strategy:
       matrix:
-        environment: ${{fromJson(needs.Environments.outputs.environments)}}
+        environment: ${{ fromJson(needs.Analyze.outputs.environments) }}
       fail-fast: false
-    name: Deploy to ${{matrix.environment}}
+    name: Deploy to ${{ matrix.environment }}
     environment:
-      name: ${{matrix.environment}}
+      name: ${{ matrix.environment }}
     steps:
       - name: Deploy
-        uses: microsoft/AL-Go/Deploy@main
+        uses: microsoft/AL-Go-Actions/Deploy@main
         env:
-          authContext: '${{secrets.AuthContext}}'
+          authContext: '${{ secrets.AuthContext }}'
         with:
           type: 'Publish'
-          projects: '${{secrets.Projects}}'
-          environmentName: ${{matrix.environment}}
-          artifacts: ${{github.event.inputs.appVersion}}
+          projects: '${{ secrets.Projects }}'
+          environmentName: ${{ matrix.environment }}
+          artifacts: ${{ github.event.inputs.appVersion }}
